--- a/CXDIP_Customers_say.html
+++ b/CXDIP_Customers_say.html
@@ -495,7 +495,7 @@
           <option value="2024" selected>2024</option>
           <option value="2025">2025</option>
         </select>
-        <span class="filter-hint">""</span>
+        <span class="filter-hint"></span>
       </div>
 
       <div class="table-wrapper">
