--- a/CXDIP_Customers_say.html
+++ b/CXDIP_Customers_say.html
@@ -454,7 +454,7 @@
         <div>
           <div class="title-main"><span>CXDIP</span> Customers Say</div>
           <div class="title-sub">
-            Panel de lectura de texto abierto.
+            Procesamiento  de texto abierto.
           </div>
         </div>
         <div class="badge-secondary">
