--- a/CXDIP_Customers_say.html
+++ b/CXDIP_Customers_say.html
@@ -489,7 +489,7 @@
 
       <!-- Selector de año -->
       <div class="filter-row">
-        <span class="filter-label">Año de análisis (evolución trimestral):</span>
+        <span class="filter-label">Selecciona el Año que quieres analizar:</span>
         <select id="year-select" class="year-select">
           <option value="2023">2023</option>
           <option value="2024" selected>2024</option>
